<resources>
    <string name="app_name">Bungki Book</string>
    <string name="bungki_book">Bungki Book</string>
    <string name="new_customer">New Customer</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="signUp_suc">User Registered Successfully. Please verify your email and login</string>
    <string name="emailNotVerified">Login Failed. User email is not verified. Please verify email and try again.</string>
</resources>