<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_customers"
    android:background="@color/background">


    <TextView
        android:id="@+id/topic"
        android:layout_width="412dp"
        android:layout_height="42dp"
        android:layout_marginTop="48dp"
        android:text="@string/new_customer"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />


    <TextView

        android:id="@+id/stdid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/student_id"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametext" />

    <EditText
        android:id="@+id/nametext"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:background="@drawable/borderradius"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/stdidtext"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:background="@drawable/borderradius"
        android:inputType="number"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/nametext"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nametext"
        app:layout_constraintTop_toBottomOf="@+id/stdid" />

    <TextView

        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stdidtext" />

    <EditText
        android:id="@+id/emailtext"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:background="@drawable/borderradius"
        android:inputType="textEmailAddress"

        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/stdidtext"
        app:layout_constraintStart_toStartOf="@+id/stdidtext"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView

        android:id="@+id/phoneno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phone_no"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailtext" />

    <EditText
        android:id="@+id/phonenotext"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:background="@drawable/borderradius"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/emailtext"
        app:layout_constraintStart_toStartOf="@+id/emailtext"
        app:layout_constraintTop_toBottomOf="@+id/phoneno" />

    <Button
        android:id="@+id/btnnew"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/buttonradius"
        android:backgroundTint="@color/buttons"
        android:text="Create Customer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonenotext"
        app:layout_constraintVertical_bias="0.971" />
</androidx.constraintlayout.widget.ConstraintLayout>